# django-athm

./: .coveragerc  .czrc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_ES.md  cliff.toml  index.html  manage.py  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: ci.yaml  ci.yml  code-quality.yml  docs.yml  release.yml  test.yaml
config/: index.html
design/: dj-athm.sketch
django_athm/: __init__.py  admin.py  apps.py  client.py  conf.py  constants.py  exceptions.py  models.py  payment_views.py  settings.py  signals.py  urls.py  utils.py  views.py  webhooks.py  wsgi.py
django_athm/ath_movil/: apps.py  constants.py  models.py  utils.py  views.py
django_athm/ath_movil/conf/: defaults.py
django_athm/ath_movil/migrations/: 0001_initial.py
django_athm/ath_movil/templatetags/: handle_response_payload.py
django_athm/locale/en/LC_MESSAGES/: django.po
django_athm/locale/es/LC_MESSAGES/: django.po
django_athm/management/commands/: athm_sync.py  install_webhook.py
django_athm/migrations/: 0001_initial.py  0002_allow_null_reference_number.py  0002_auto_20200202_1855.py  0002_webhook_event_payment_refund.py  0003_athm_client_alter_athm_item_options_and_more.py  0004_add_athm_v1_fields.py  0004_change_float_to_decimal.py  0004_v1_beta1_webhook_backend.py  0004_webhook_backend_support.py  0005_fix_auto_now_add.py  0005_fix_metadata_length_limits.py  0006_add_transaction_indexes_and_ordering.py  0007_convert_float_to_decimal.py
django_athm/services/: __init__.py  client_service.py  payment_service.py  webhook_processor.py
django_athm/static/django_athm/: athm.css  athm.js
django_athm/templates/: athm_button.html  athm_modal.html  base.html  button.html
django_athm/templates/admin/django_athm/payment/: refund_confirmation.html
django_athm/templates/admin/django_athm/webhookevent/: change_list.html  install_webhooks.html  reprocess_confirmation.html
django_athm/templates/django_athm/: button.html
django_athm/templatetags/: athm_response_signal.py  django_athm.py
docs/: admin.md  api.md  config.md  configuration.md  index.md  installation.md  models.md  quickstart.md  reconciliation.md  requirements.txt  services.md  signals.md  upgrading.md  webhooks.md
search/: search_index.json
tests/: __init__.py  conftest.py  settings.py  test_admin.py  test_commands.py  test_conf.py  test_models.py  test_payment_service.py  test_signals.py  test_templatetags.py  test_utils.py  test_views.py  test_webhook_processor.py  urls.py
tests/apps/testapp/: apps.py  signals.py  urls.py  views.py
tests/apps/testapp/templates/: home.html
tests/fixtures/: athm_config.json  athm_v4_responses.json  complete_response.json  payment_completed_webhook.json  refund_response.json  refund_webhook.json  report_response.json
tests/integration/: test_signal_integration.py
tests/static/js/: jquery-3.3.1.min.js  jquery-3.6.0.min.js
tests/templates/: base.html
tests/unit/: test_admin.py  test_client_service.py  test_commands.py  test_models.py  test_payment_service.py  test_signals.py  test_templatetags.py  test_utils.py  test_utils_webhook.py  test_views.py  test_webhook_processor.py
