[tool.poetry]
name = "django-athm"
version = "0.7.0"
description = "Django + ATH Móvil"
authors = ["Raúl Negrón <raul.esteban.negron@gmail.com>"]
maintainers = ["Raúl Negrón <raul.esteban.negron@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/django-athm/django-athm"
documentation = "https://django-athm.github.io/django-athm/"
keywords = [
    "Django",
    "ATH Móvil",
    "payments",
    "athm"
]
classifiers= [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
phonenumberslite = "^8.12.53"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
codecov = "^2.1.11"
Django = "^4.1"
flake8 = "^5.0.4"
isort = "^5.7.0"
mkdocs = "^1.3.1"
pre-commit = "^2.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.8.2"
respx = "^0.19.2"
setuptools = "^59.4.0"
tox = "^3.25.1"


[tool.poetry.urls]
issues = "https://github.com/django-athm/django-athm/issues"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist =
    py{38,39,310}-django{32,40,41}
    lint

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310


[testenv]
whitelist_externals = poetry
setenv =
    DJANGO_SETTINGS_MODULE = tests.settings
    PYTHONWARNINGS = all
    PYTEST_ADDOPTS = --cov django_athm --cov-append --cov-report=xml --cov-fail-under 90
deps =
    pytest
    pytest-cov == 3.0.0
    pytest-mock == 3.5.1
    pytest-django == 4.5.1
    respx == 0.19.0
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
commands =
    pytest {posargs}

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase

[testenv:lint]
skip_install = True
deps =
    isort
    black
    flake8

commands =
    isort . --profile=black --check
    black . --check
    flake8 django_athm/

"""

[build-system]
requires = ["poetry-core>=1.0.0", "django>=3.2,<4.2"]
build-backend = "poetry.core.masonry.api"

