[project]
name = "django-athm"
version = "0.7.0"
description = "Django + ATH Móvil"
authors = [
    {name = "Raúl Negrón", email = "raul.esteban.negron@gmail.com"}
]
maintainers = [
    {name = "Raúl Negrón", email = "raul.esteban.negron@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Django",
    "ATH Móvil",
    "payments",
    "athm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
]
dependencies = [
    "httpx>=0.28.0,<0.29.0",
    "phonenumberslite>=9.0.0,<10.0.0",
]

[project.urls]
homepage = "https://github.com/django-athm/django-athm"
repository = "https://github.com/django-athm/django-athm"
documentation = "https://django-athm.github.io/django-athm/"
issues = "https://github.com/django-athm/django-athm/issues"

[project.optional-dependencies]
dev = [
    "Django>=5.2,<6.0",
    "ruff>=0.14.0",
    "codecov>=2.1.13",
    "mkdocs>=1.6.1",
    "pre-commit>=4.3.0",
    "pytest>=8.5.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.0",
    "pytest-mock>=3.15.0",
    "respx>=0.22.0",
    "tox>=4.32.0",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist =
    py{310,311,312,313,314}-django{42,52}
    lint

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314

[testenv]
setenv =
    DJANGO_SETTINGS_MODULE = tests.settings
    PYTHONWARNINGS = all
    PYTEST_ADDOPTS = --cov django_athm --cov-append --cov-report=xml --cov-fail-under 90
deps =
    pytest>=8.5.0
    pytest-cov>=7.0.0
    pytest-mock>=3.15.0
    pytest-django>=4.11.0
    respx>=0.22.0
    django42: Django>=4.2,<4.3
    django52: Django>=5.2,<6.0
commands =
    pytest {posargs}

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase

[testenv:lint]
skip_install = True
deps =
    ruff>=0.14.0
commands =
    ruff check .
    ruff format --check .

"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501", "ARG001"]
"tests/*" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

